basic code for start privet chat with two user

--- a/core/templates/core/forum_detail.html
+++ b/core/templates/core/forum_detail.html
@@ -32,7 +32,7 @@
             <div id="online-users">
                 {% for profile in online_users %}
                 <div class="user-status" data-username="{{ profile.user.username }}">
-                    {{ profile.user.username }} <span class="status-indicator">●</span>
+                    <a href="{% url 'private_chat' profile.user.id %}">{{ profile.user.username }}</a><span class="status-indicator">●</span>
                 </div>
                 {% endfor %}
             </div>
